<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home2"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_own"
            android:icon="@drawable/mypets"
            android:title="@string/menu_own" />
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/bell"
            android:title="@string/menu_alert" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar"
            android:title="@string/menu_calendar" />
    </group>

    <item android:title="@string/menu_contact">
        <menu>
            <item
                android:id="@+id/nav_report"
                android:icon="@drawable/alert"
                android:title="@string/menu_report" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/help"
                android:title="@string/menu_help" />
        </menu>
    </item>

</menu>
